tests/error/0042.exl
let
    f = i: i * i
           ^ERROR
in
    f (f (f (f (f (f 2)))))
